welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: value getMondHauteur
  for(a<-1 to getMondHauteur()-1){
              ^