welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T = new Array[Color](getMondeHauteur()+1)
  col1(T)
  left()
  avance()
  right()
  avance()
  
  for (m<-1 to getMondeLargeur()-1){
    col(T)
  }
  for(a<-1 to getMondHauteur()-1){
    avance()
  }
  left()
  for(a<-1 to getMondeLargeur()-1){
    avance()
  }
  right()
}

def col1(T:Array[Color]){
  for (i<-1 to getMondeHauteur()){
    T(i)=getCouleurSol()
    avance()
  }  
  
}

def col(T:Array[Color]){
  for (l<-1 to getMondeHauteur()){
    setCouleurBrosse(T(l))
    baisseBrosse()
    leveBrosse()
    avance()
  }
  left()
  avance()
  right()
  avance()
}